--- a/things-resource-selector-behavior.html
+++ b/things-resource-selector-behavior.html
@@ -25,7 +25,7 @@ Things.ResourceSelectorBehavior = {
    * @param {Boolean} modal modal로 오픈할 지 여부
    */
   openResourceSelectorByGrid: function(parentGrid, parentGridRowIdx, selectorConfig, modal) {
-    var selector = this._createResourceContent(selectorConfig.resourceType, selectorConfig.resourceName, selectorConfig.initialParams);
+    var selector = this._createResourceContent(selectorConfig.resourceType, selectorConfig.resourceName, selectorConfig.initialParams, selectorConfig.bindFields);
     this._getResourceSelectorDialog().showResourceDialog(selector, modal, selector.refreshGridData);
     this._addSelectedListenerByGrid(selector, parentGrid, parentGridRowIdx, selectorConfig);
   },
@@ -37,7 +37,7 @@ Things.ResourceSelectorBehavior = {
    * @param {Boolean} modal modal로 오픈할 지 여부
    */
   openResourceSelectorByForm: function(ownerElement, modal) {
-    var selector = this._createResourceContent(ownerElement.resourceType, ownerElement.resourceName, ownerElement.initialParams);
+    var selector = this._createResourceContent(ownerElement.resourceType, ownerElement.resourceName, ownerElement.initialParams, ownerElement.bindFields);
     this._getResourceSelectorDialog().showResourceDialog(selector, modal, selector.refreshGridData);
     this._addSelectedListenerByForm(selector, ownerElement);
   },  
@@ -49,16 +49,16 @@ Things.ResourceSelectorBehavior = {
    * @param {String} resourceType ResourceSelector의 종류 (Menu / Entity). Menu 설정을 바탕으로 ResourceSelector를 구성할 것인지 Entity 설정을 바탕으로 할 것인지 설정
    * @param {String} resourceName resourceType이 Menu로 선택되어 있다면 Menu 명, resourceType이 Entity로 선택되어 있다면 Entity 명  
    * @param {String} initialParams ResourceSelector에 전달할 초기 파라미터. {ParamName1}:{ParamValue1},{ParamName2}:{ParamValue2}, .... 형식의 String 값  
-   * @param {String} extraTargetFields ResourceSelector에서 선택한 값을 기본값(id, title필드 값) 외에 ownerResource의 다른 필드에 설정하고자 할 때 사용. ','구분자로 구분한다.
-   * @param {Object} ownerResource ResourceSelector를 호출한 (폼 필드나 그리드 컬럼) 측에서 해당 데이터를 변경시키기 위해서 넘겨준다. extraTargetFields가 설정된 경우는 반드시 설정해야 한다. 
+   * @param {String} bindFields ResourceSelector에서 선택한 값을 기본값(id, title필드 값) 외에 ownerResource의 다른 필드에 설정하고자 할 때 사용. ','구분자로 구분한다.
+   * @param {Object} ownerResource ResourceSelector를 호출한 (폼 필드나 그리드 컬럼) 측에서 해당 데이터를 변경시키기 위해서 넘겨준다. bindFields가 설정된 경우는 반드시 설정해야 한다. 
    * @return {Object} things-resource-selector-content element
    */
-  _createResourceContent: function(resourceType, resourceName, initialParams, extraTargetFields, ownerResource) {
+  _createResourceContent: function(resourceType, resourceName, initialParams, bindFields, ownerResource) {
     var selector = document.createElement('things-selector-content-by-' + resourceType.toLowerCase());
     selector.id = "resource-selector";
     selector.initialParams = initialParams;
     selector.resourceName = resourceName;
-    selector.extraTargetFields = extraTargetFields;
+    selector.bindFields = bindFields;
     selector.ownerResource = ownerResource;
     return selector;
   },
@@ -81,7 +81,10 @@ Things.ResourceSelectorBehavior = {
       var titleField = e.currentTarget.getTitleField();
       var row = parentGrid.focusedRow();
       var dataSet = parentGrid.dataSource();
+      // Parent Grid의 선택된 Row의 어느 필드에 Selector 그리드에서 선택된 Row의 {id, title} 값을 설정할 것인지 - Parent Grid의 선택된 Row의 필드명
       var ownerField = selectorConfig.ownerField;
+      // Parent Grid의 선택된 Row의 어느 필드들과 Selector Grid의 선택된 Row의 어느 필드에 값을 assign 할 것인지 - 소스 필드명=타겟 필드명 
+      var bindFields = selectorConfig.bindFields;
 
       if(row && row.dataIndex() >= 0) {
         var rowObj = row.getRowObject();
@@ -100,6 +103,22 @@ Things.ResourceSelectorBehavior = {
         }
 
         rowObj[ownerField] = selectedObj;
+
+        if(bindFields) {
+          var binders = bindFields.split(',');
+          for(var i = 0 ; i < binders.length ; i++) {
+            var binder = binders[i];
+            var fromField = binder, toField = binder;
+
+            if(binder.indexOf('=') > 0) {
+              var binderArr = binder.split('=');
+              toField = binderArr[0], fromField = binderArr[1];
+            }
+
+            rowObj[toField] = e.detail[fromField];
+          }
+        }
+
         me.fire('things-resource-selector-selected', { rowObj: rowObj, resource : e.detail } );
         dataSet.updateRow(parentRowIdx, rowObj);
         me._getResourceSelectorDialog().closeResourceDialog();
@@ -111,7 +130,7 @@ Things.ResourceSelectorBehavior = {
 
   /**
    * Resource Selector에서 값이 선택되었을 경우
-   * TODO SelectorContent 내부에서 처리하기로 한다.
+   * TODO SelectorContent 내부에서 처리하기로 한다. bindFields 처리 ...
    *
    * @params {Object} selector
    * @params {Object} ownerElement
