--- a/things-resource-dialog.html
+++ b/things-resource-dialog.html
@@ -77,6 +77,7 @@ ResourceSelector를 위한 다이얼로그.
 	<template>
 		<paper-dialog
 		id='dialog' 
+		always-on-top
 		entry-animation="scale-up-animation"
 		exit-animation="fade-out-animation">
 			<paper-toolbar>
