ResourceSelector Title 국제화

--- a/things-selector-content-by-entity.html
+++ b/things-selector-content-by-entity.html
@@ -68,6 +68,7 @@ Things Reource Content는 검색 폼, 그리드가 기본으로 표시되고 그
 				per-page="{{perPage}}"
 				data="[[items]]"
 				total-count="[[itemCount]]"
+				fixed-column-count="0"
 				paginatable>
 			</things-resource-grid>
 		</div>
