--- a/things-resource-selector-behavior.html
+++ b/things-resource-selector-behavior.html
@@ -60,6 +60,7 @@ Things.ResourceSelectorBehavior = {
     selector.resourceName = resourceName;
     selector.bindFields = bindFields;
     selector.ownerResource = ownerResource;
+    selector.title = Things.DataGlobal.t('menu.' + resourceName);
     return selector;
   },
 
