--- a/things-selector-content-by-menu.html
+++ b/things-selector-content-by-menu.html
@@ -69,7 +69,8 @@ Things Reource Content는 검색 폼, 그리드가 기본으로 표시되고 그
 				current-page="{{page}}"
 				per-page="{{perPage}}"
 				data="[[items]]"
-				total-count="[[itemCount]]">
+				total-count="[[itemCount]]"
+				fixed-column-count="0">
 			</things-resource-grid>
 		</div>
 	</template>
