things-resource-dialog style fix & version to 0.1.25

--- a/things-resource-dialog.html
+++ b/things-resource-dialog.html
@@ -72,6 +72,9 @@ ResourceSelector를 위한 다이얼로그.
 		button:focus {
 			outline:none;
 		}
+		:host::shadow things-selector-form{
+			background:transparent;
+		}
 	</style>
 
 	<template>
