add initial prams to search form

--- a/things-selector-content-by-entity.html
+++ b/things-selector-content-by-entity.html
@@ -37,6 +37,7 @@
 
 			<things-selector-form 
 				id="search-form"
+				initial-params ="[[initialParams]]"
 				form-fields="[[searchFormFields]]" 
 				select-fields="[[selectFields]]"
 				sort-fields="[[sortFields]]"
