--- a/things-selector-content-by-entity.html
+++ b/things-selector-content-by-entity.html
@@ -345,14 +345,19 @@
 				var selectedResource = event.detail;
 				var ownerData = this.findOwnerData();
 
-				// Container에서 필요한 대표 컬럼 및 선택한 값을 설정한다. 
-				this.ownerElement.resourceIdField = this.getIdField();
-				this.ownerElement.resourceTitleField = this.getTitleField();
-				var idValue = selectedResource[this.getIdField()];
-				var displayValue = selectedResource[this.getTitleField()];
-				this.ownerElement.setResourceValue(idValue, displayValue, selectedResource);
+				if(this.ownerElement.localName == 'things-resource-selector-by-format') {
+					this.ownerElement.setObjValue(selectedResource);
+				} else {
+					// Container에서 필요한 대표 컬럼 및 선택한 값을 설정한다. 
+					this.ownerElement.resourceIdField = this.getIdField();
+					this.ownerElement.resourceTitleField = this.getTitleField();
+					var idValue = selectedResource[this.getIdField()];
+					var displayValue = selectedResource[this.getTitleField()];
+					this.ownerElement.setResourceValue(idValue, displayValue, selectedResource);
+				}
 				this._bindObjectFields(selectedResource, ownerData);
 				this.closeResourceSelectorDialog();
+
 			},
 
 			/**
